--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -56,11 +56,7 @@
    "outputs": [],
    "source": [
     "s3_prefix = \"phi3-dataset\"\n",
-    "dataset_name = \"JM-Lee/Phi-3-mini-128K-instruct_instruction\"\n",
-    "train_dataset = load_dataset(path=dataset_name, split=\"train\")\n",
-    "\n",
-    "training_input_path = f's3://{sess.default_bucket()}/{s3_prefix}/train'\n",
-    "train_dataset.save_to_disk(training_input_path)"
+    "dataset_cache = f's3://{sess.default_bucket()}/{s3_prefix}/train'"
    ]
   },
   {
@@ -80,9 +76,8 @@
     "checkpoint_s3_uri = f's3://{sess.default_bucket()}/{base_job_name}/checkpoints'\n",
     "# hyperparameters, which are passed into the training job\n",
     "hyperparameters={\n",
-    "    'training_dir': training_input_path,\n",
-    "    'output_dir':'/opt/ml/checkpoints',\n",
-    "    'data_field': 'merged_text'\n",
+    "    'dataset_dir': dataset_cache,\n",
+    "    'output_dir': checkpoint_s3_uri,\n",
     "}\n",
     "\n",
     "# create the Estimator\n",
